[package]
name = "snake_2d"
version = "0.1.0"
authors = ["ivan.ilic <ivan.ilic@petrolsofting.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.50.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.64.0"
piston2d-opengl_graphics = "0.72.0"
rand = "0.6.5"